--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,5 @@
 services:
   - type: web
     name: Cars_Sense
-    env: python
-    buildCommand: |
-      apt-get update && apt-get install -y build-essential libblas-dev liblapack-dev
-      pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    env: docker
+    dockerfilePath: ./Dockerfile
