--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
+# Remove explicit blis version entirely
 Flask==2.3.3
 gunicorn==23.0.0
 requests>=2.32.4,<3.0.0
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 spacy==3.8.7
-blis==0.7.9 --only-binary :all:
